--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ node_modules
 dist
 dist-ssr
 *.local
-*.vercel
 
 # Editor directories and files
 .vscode/*
@@ -23,3 +22,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+*.env
