--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nanoid": "^5.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.1.1",
     "uuid": "^11.1.0"
   },
