--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@vercel/analytics": "^1.4.1",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
@@ -17,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-qr-code": "^2.0.18",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "uuid": "^11.1.0"
   },
