--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,9 @@
 {
-  "semi": true,
   "singleQuote": true,
-  "tabWidth": 2,
   "trailingComma": "es5",
-  "printWidth": 100,
   "bracketSpacing": true,
-  "arrowParens": "avoid",
+  "arrowParens": "always",
+  "semi": true,
+  "tabWidth": 2,
   "endOfLine": "auto"
 }
