--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "breakit",
+  "name": "break",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,35 +8,43 @@
     "build": "tsc -b && vite build",
     "prettier": "prettier --write .",
     "lint": "eslint . --max-warnings=0",
+    "test": "vitest run",
+    "test:ui": "vitest --ui",
     "preview": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@testing-library/user-event": "^14.6.1",
     "@vercel/analytics": "^1.4.1",
+    "@vitest/ui": "^3.2.4",
     "axios": "^1.12.2",
     "dotenv": "^16.4.7",
     "nanoid": "^5.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.1",
-    "uuid": "^11.1.0"
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "jsdom": "^27.0.0",
     "postcss": "^8.4.49",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vitest": "^3.2.4"
   }
 }
